src/objects/Arbol_Decision_Lineas__c.object
<CustomObject>
    <fields>
        <fullName>ADL_SEL_S_Gremios__c</fullName>
        <label>Salida: Gremios</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>06</fullName>
                    <label>CRISTALERO</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>AIRE ACONDICIONADO</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>ALARMAS</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>ALBAÑIL</label>
                </value>
                <value>
                    <fullName>37</fullName>
                    <label>AMBULANCIAS</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>ANTENISTA</label>
                </value>
                <value>
                    <fullName>41</fullName>
                    <label>ANULACIÓN TARJETAS</label>
                </value>
                <value>
                    <fullName>42</fullName>
                    <label>AUTOMÁTICOS CASER</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>BARNIZADOR</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>CALEFACCIÓN</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>CARPINTERO MADERA</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>CARPINTERO METÁLICO</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>CERRAJERO</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>ELECTRICISTA</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>ENMOQUETADOR</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>ESCAYOLA</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>FACHADAS</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>FONTANERO</label>
                </value>
                <value>
                    <fullName>49</fullName>
                    <label>FRIGORISTA</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>FRIO INDUSTRIAL</label>
                </value>
                <value>
                    <fullName>57</fullName>
                    <label>FUMIGACIÓN</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>GAS</label>
                </value>
                <value>
                    <fullName>73</fullName>
                    <label>GRANDES REFORMAS</label>
                </value>
                <value>
                    <fullName>70</fullName>
                    <label>GRANDES SINIESTROS</label>
                </value>
                <value>
                    <fullName>38</fullName>
                    <label>HOTEL</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>IMPERMEABILIZACIONES</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>INSPECCIÓN DE SERVICIOS</label>
                </value>
                <value>
                    <fullName>75</fullName>
                    <label>INSTALACIONES AIRE ACONDICIONADO</label>
                </value>
                <value>
                    <fullName>56</fullName>
                    <label>JARDINERÍA</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>LAVANDERÍA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_Grupo_Causa__c</fullName>
        <label>Salida: Grupo de Causa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>AGUA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_Motivo_Perito__c</fullName>
        <description>Motivo perito.</description>
        <label>Salida: Motivo perito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>32 - Ayudas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_Motivo_Rechazo__c</fullName>
        <label>Salida: Motivo de Rechazo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Motivo_Rechazo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_Tipo_Actuacion_Mult__c</fullName>
        <label>Salida: Tipo de Siniestro (Gestor)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>REPARABLE</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>MIXTO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_Tipo_Actuacion__c</fullName>
        <label>Salida: Tipo de Actuación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_Siniestro</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_SEL_S_Tipo_Carta__c</fullName>
        <label>Salida: Tipo de Carta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Correo Certificado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADL_TXT_S_Carnet__c</fullName>
        <label>Salida: Carnet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADL_TXT_S_Com_Auto_Lim_Cobertura__c</fullName>
        <label>Salida: Comentario Auto Límite Cobertura</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADL_TXT_S_Especialidad__c</fullName>
        <label>Salida: Especialidad</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADL_TXT_S_Garantia_RC__c</fullName>
        <label>Salida: Garantía de RC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADL_TXT_S_Garantias_Enviar_CIA__c</fullName>
        <label>Salida: Garantías a enviar a CIA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADL_TXT_S_Garantias_Piden_Perito__c</fullName>
        <description>Como salida del árbol de confirmación, nos informarán este campo con el código de las garantías asociadas a la línea que disparan una solicitud de perito automática. Las garantías vendrán separadas por Punto y Coma.</description>
        <label>Salida: Garantias que piden perito</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADL_TXT_S_Garantias__c</fullName>
        <label>Salida: Garantías</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADL_TXT_S_Herramientas__c</fullName>
        <label>Salida: Herramientas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADL_TXT_S_Submotivo_Perito__c</fullName>
        <description>Campo texto donde se informará el código y descripción del submotivo</description>
        <label>Salida: Submotivo perito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Árbol de Decisión: Línea</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ADL_FOR_Compania__c</columns>
        <columns>ADL_FOR_Producto__c</columns>
        <columns>ADL_SEL_E_Tipo_Riesgo__c</columns>
        <columns>ADL_SEL_S_Grupo_Causa__c</columns>
        <columns>ADL_LKP_Ay_Grupo_Causa__c</columns>
        <columns>ADL_SEL_E_Tipo_Averia__c</columns>
        <columns>ADL_SEL_E_Detalle_Averia__c</columns>
        <columns>ADL_SEL_E_Causa_Averia__c</columns>
        <columns>ADL_SEL_E_Otros_Danos_Perjudicados__c</columns>
        <columns>ADL_SEL_E_Otros_Danos_Propios__c</columns>
        <columns>ADL_SEL_S_DocsIndemnizable__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Ejemplo_Sondeo</fullName>
        <columns>ADL_LKP_Arbol_Decision__c</columns>
        <columns>NAME</columns>
        <columns>ADL_FOR_Producto__c</columns>
        <columns>ADL_LKP_Ay_Grupo_Causa__c</columns>
        <columns>ADL_LKP_Ay_Tipo_Averia__c</columns>
        <columns>ADL_LKP_Ay_Detalle_Averia__c</columns>
        <columns>ADL_LKP_Ay_Causa_Averia__c</columns>
        <columns>ADL_SEL_E_Situacion_Danos_Propios__c</columns>
        <columns>ADL_SEL_E_Otros_Danos_Propios__c</columns>
        <columns>ADL_SEL_E_Situacion_Danos_Perjud__c</columns>
        <columns>ADL_SEL_E_Otros_Danos_Perjudicados__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADL_FOR_Producto__c</field>
            <operation>equals</operation>
            <value>KIT 107</value>
        </filters>
        <label>Ejemplo Sondeo</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Grupo_de_Causa_Agua</fullName>
        <columns>NAME</columns>
        <columns>ADL_SEL_E_Otros_Danos_Perjudicados__c</columns>
        <columns>ADL_SEL_E_Tipo_Riesgo__c</columns>
        <filterScope>Everything</filterScope>
        <label>Grupo de Causa:Agua</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>NN</fullName>
        <columns>NAME</columns>
        <columns>ADL_FOR_Producto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADL_FOR_Compania__c</field>
            <operation>equals</operation>
            <value>Nationale Nederlanden</value>
        </filters>
        <label>NN</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>ADL{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Árbol de Decisión: Líneas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>